--- a/src/main/webapp/css/search_layout.css
+++ b/src/main/webapp/css/search_layout.css
@@ -16,12 +16,18 @@
     limitations under the License.
 */
 
+/*
 h1 {
     font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     color: #eee;
     font-size: 18pt;
     padding: 10px 0 5px 0;
+}
+*/
+
+.jcs_logo {
+    padding: 10px 0 0 0;
 }
 
 #search_top {
