add descriptive comments into CSS files

--- a/src/main/webapp/css/reset_override.css
+++ b/src/main/webapp/css/reset_override.css
@@ -17,8 +17,12 @@
 */
 
 /*
+    ======================================================================
+    Override some style in original Meyer's CSS reset.
+
     Why this? See link below:
     http://stackoverflow.com/questions/6813750/any-ideas-why-strong-tag-doesnt-work-but-css-does
+    ======================================================================
 */
 
 strong, b {
