--- a/src/main/webapp/css/search_field.css
+++ b/src/main/webapp/css/search_field.css
@@ -16,6 +16,12 @@
     limitations under the License.
 */
 
+/*
+    ======================================================================
+    Detailed styling of the search field.
+    ======================================================================
+*/
+
 #search_top input:focus { outline: none; }
 
 #search_top input[type=text] {
