--- a/src/main/webapp/css/search_filter_tab.css
+++ b/src/main/webapp/css/search_filter_tab.css
@@ -16,6 +16,12 @@
     limitations under the License.
 */
 
+/*
+    ======================================================================
+    Filter tab (body).
+    ======================================================================
+*/
+
 .filter_tab input:focus { outline: none; }
 
 .filter_tab input[type=text] {
