--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -29,6 +29,12 @@
     p {font-size:0.875em;} // 14px/16=0.875em
 */
 
+/*
+    ======================================================================
+    Search results and pagination.
+    ======================================================================
+*/
+
 #search_results {
     width: 600px;
     margin-left: auto;
