--- a/src/main/webapp/css/search_suggestions.css
+++ b/src/main/webapp/css/search_suggestions.css
@@ -16,6 +16,12 @@
     limitations under the License.
 */
 
+/*
+    ======================================================================
+    Search suggestions element.
+    ======================================================================
+*/
+
 #search_suggestions {
 
     background-color: white;
