--- a/src/main/webapp/css/search_top.css
+++ b/src/main/webapp/css/search_top.css
@@ -16,6 +16,12 @@
     limitations under the License.
 */
 
+/*
+    ======================================================================
+    The base HTML styling on top of CSS reset.
+    ======================================================================
+*/
+
 * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
