add min-width to top

--- a/src/main/webapp/css/search_layout.css
+++ b/src/main/webapp/css/search_layout.css
@@ -44,6 +44,9 @@ h1 {
 }
 
 #search_top {
+    /* TODO: need to update when on smaller screen (mobile devices...) */
+    min-width: 500px;
+
     background-color: rgb(90, 100, 120);
     text-align: center;
     position: relative;
