process search results when the query is executed

--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -41,6 +41,11 @@
     margin-right: auto;
 }
 
+/* Used while search results are processed. */
+#search_results.disabled {
+    opacity: 0.2;
+}
+
 .statistics {
     margin: 20px 0 20px 60px;
     color: gray;
