make search hit 'title' clickable

--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -92,6 +92,11 @@
     display: inline-block;
 }
 
+.hit > .main > .title > a {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* project icons could be done this way? */
 /*
 .hit > .main > .link:before {
