--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -142,17 +142,26 @@
 }
 
 .hit > .main > .contributors_list {
-    margin: 8px 0 0 0;
+    margin-top: 8px;
+    border: 0;
+}
+
+.hit > .main > .contributors_list span {
+    margin: 0 5px 0 0;
 }
 
 .hit > .main > .contributors_list img {
-    margin: 0 5px 0 0;
     opacity: 0.3;
+    vertical-align: middle;
+}
+
+.hit > .main > .contributors_list img:hover {
+    opacity: 1;
 }
 
 .hit > .main > .contributors_list .selected_contributor_name {
-    font-size: 14px;
-    vertical-align: top;
+    font-size: 12px;
+    vertical-align: middle;
 }
 
 .hit > .main > .snippet {
@@ -183,16 +192,25 @@
 /*}*/
 
 .snippet > div.children {
+    margin-top: 4px;
     font-size: 80%;
 }
 
-.snippet > div.children > ul > li:before {
-    content: "- ";
-}
+/*.snippet > div.children > ul {*/
+    /*overflow: visible;*/
+/*}*/
 
 .snippet > div.children > ul > li {
-    padding-left: 10px;
+    /*padding-left: 10px;*/
+    margin: 2px 0 2px 0;
+
     font-size: inherit;
+    list-style-type: circle;
+
+    background-image: url(../image/icons/icon_dot.gif);
+    background-repeat: no-repeat;
+    background-position: 5px 9px;
+    padding-left: 14px;
 }
 
 .pagination {
