Basic search results pagination support. Closes #13

--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -258,6 +258,15 @@
     color: gray;
 }
 
+.pagination a {
+    text-decoration: none;
+    color: gray;
+}
+
+.pagination a.actual {
+    text-decoration: underline;
+}
+
 /*
 .pagination span {
     width: 30px;
