never wrap contributor name in contributor list

--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -203,6 +203,7 @@
 .hit > .main > .contributors_list .selected_contributor_name {
     font-size: 12px;
     vertical-align: middle;
+    white-space: nowrap;
 }
 
 .hit > .main > .snippet {
