Make pagination fire new "query submit event" (thus some refactoring) and remove unused class.

--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -259,12 +259,14 @@
     color: gray;
 }
 
-.pagination a {
+.pagination .pc_ {
+    margin: 0 15px 0 15px;
+    cursor: pointer;
     text-decoration: none;
     color: gray;
 }
 
-.pagination a.actual {
+.pagination .pc_.actual {
     text-decoration: underline;
 }
 
