--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -251,6 +251,11 @@
     margin: 3px 0 6px 0;
 }
 
+.hit > .main > .snippet > .tags_list {
+    margin-top: 4px;
+    font-size: 80%;
+}
+
 .pagination {
     text-align: center;
     word-spacing: 1.5em;
