--- a/src/main/webapp/css/jbosscommunity/bootstrap-community.less
+++ b/src/main/webapp/css/jbosscommunity/bootstrap-community.less
@@ -1,5 +1,7 @@
 // This file will be created on build time with jborg_fonts_url and jborg_images_url variables gathered from site config
-@import "../_tmp/config-variables";
+// @import "../_tmp/config-variables";
+// replaces by hardcoded values
+@import "jboss_variables";
 
 // I gather this file is a starting point for the project.
 @import "_bootstrap/bootstrap";
