Renaming: dcp -> sys Related to https://github.com/searchisko/searchisko/commit/bcb92945937aca62e4ab637e4b85e8c2959c2387

--- a/src/main/webapp/css/search_results.css
+++ b/src/main/webapp/css/search_results.css
@@ -220,11 +220,11 @@
     padding: 6px 0 0 0;
 }
 
-.hit > .main > .snippet > .dcp_project {
+.hit > .main > .snippet > .sys_project {
     /*float: left;*/
 }
 
-.hit > .main > .snippet > .dcp_type {
+.hit > .main > .snippet > .sys_type {
     /*float: left;*/
 }
 
