--- a/searchPage/src/main/webapp/css/search_results.css
+++ b/searchPage/src/main/webapp/css/search_results.css
@@ -102,7 +102,7 @@
     padding: 0 0 2px 0;
     /*padding-bottom: 2px;*/
     /*border-bottom: rgba(34, 56, 102, 0.45) solid 1px;*/
-    display: inline-block;
+    /*display: inline-block;*/
 
     position: relative;
     top: -2px;
