[Design] A new logo.
I asked designers to produce a new logo for the application in order to align it more close to the official JBoss Developer family.

- New logo image
- Minor change in background color

--- a/searchPage/src/main/webapp/css/search_layout.css
+++ b/searchPage/src/main/webapp/css/search_layout.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 #search_top {
-    background-color: rgb(90, 100, 120);
+    background-color: #4a5d75;
     text-align: center;
     position: relative;
     z-index: 100;
